--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #e4f9f5;
+	font-family: Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;
 }
 
 hr {
