--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,12 @@ hr {
 	border-radius: 5px;
 }
 
-h3 {
+.section-heading {
 	color: #150941;
-	font-family: 'Spartan', sans-serif;
-	font-weight: 700;
+	font-family: 'Righteous', cursive;
 	margin: 10% 10% 5%;
 	text-transform: uppercase;
+	font-size: 2.5vw;
 }
 
 .left-heading {
@@ -29,23 +29,12 @@ h3 {
 }
 
 .coloured {
-	background-color: #a7d7db;
+	background-color: #8EE3EF;
 }
 
 .right-para {
 	margin-top: 5%;
 	margin-right: 8%;
-}
-
-.blobby {
-	border-radius: 50%;
-	background-image: linear-gradient(to bottom right, #04B2C2, #150941);
-	position: absolute;
-}
-
-.striped { 
-	border-radius: 50%;
-	position: absolute;
 }
 
 .right-col {
@@ -68,63 +57,47 @@ h3 {
 	padding-bottom: 2%;
 }
 
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+	position: fixed;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 100;
+	border-top: 0;
+	background-color: #254E70;
+  }
+
 /*********************************** Titles section **************************************/
 
 #title {
-	background-color: #150941;
+	background-color: #254e70;
 	overflow: hidden;
-	height: 40rem; 
+	height: 47.5rem; 
+	background-image: url('../images/graduation.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center 25%;
+	box-shadow:inset 0 0 0 2000px rgba(37, 78, 112, 0.75);
 }
 
 .title-heading {
-	color: #04B2C2;
-	font-family: 'Spartan', sans-serif;
-	font-weight: 900;
+	color: #AEF3E7;
+	font-family: 'Righteous', cursive;
 	font-size: 60pt;
-	margin: 18% 10% 25%;
+	margin: 18% 10% 5%;
 }
 
 .tagline {
 	color: #F1F1F2;
 	text-transform: uppercase;
 	letter-spacing: 0.2rem;
-	position: absolute;
-	bottom: 0.5rem;
-	right: 5rem;
-	margin-right: 1%;
-}
-
-.stripy1 {
-	height: 110%;
-	width: 100%;
-	top: 80%;
-	background: repeating-linear-gradient(85deg, #04B2C2, #03838F 10px, transparent 10px, transparent 20px);
-}
-
-.stripy2 {
-	height: 110%;
-	width: 90%;
-	bottom: 80%;
-	background: repeating-linear-gradient(-45deg, #04B2C2, #03838F 10px, transparent 10px, transparent 20px);
-}
-
-.blob1 {
-	height: 80%;
-	width: 70%;
-	left: -10%;
-	top: 65%;
-}
-
-.blob2 {
-	height: 80%;
-	width: 60%;
-	right: 0%;
-	bottom: 65%;
+	margin: 0 10% 25%;
 }
 
 /************************************** Bio section **************************************/
 #bio {
-	padding: 10% 0;
+	padding: 15% 0;
 	overflow: hidden;
 }
 
@@ -132,35 +105,6 @@ h3 {
 	height: 290px;
 	border-radius: 50%;
 	margin: 0% 25%;
-}
-
-.stripy4 {
-	height: 50px;
-	width: 50px;
-	left: 10%;
-	background: repeating-linear-gradient(-35deg, #150941, #03838F 10px, transparent 10px, transparent 15px);
-}
-
-.blob4 {
-	height: 20rem;
-	width: 20rem;
-	left: -10%;
-	top:-7%;
-}
-
-.blob5 {
-	height: 5rem;
-	width: 5rem;
-	left: 65%;
-	top: 1%;
-}
-
-.stripy4 {
-	height: 22rem;
-	width: 22rem;
-	left: -10%;
-	top: 9%;
-	background: repeating-linear-gradient(-45deg, #04B2C2, #03838F 10px, transparent 10px, transparent 20px);
 }
 
 /************************************** Skills section **************************************/
@@ -194,20 +138,6 @@ h3 {
 .prog-label {
 	float: left;
 	margin-right: 1%;
-}
-
-.stripy3 {
-	height: 70%;
-	width: 80%;
-	top: 35%;
-	right: -30%;
-	background: repeating-linear-gradient(-35deg, #150941, #03838F 10px, transparent 10px, transparent 20px);
-}
-
-.blob3 {
-	height: 60%;
-	width: 70%;
-	right: -40%;
 }
 
 .skills-chart {
