--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,7 @@ hr {
 .ref-img {
 	border-radius: 50% 50%;
 	margin: 5% 0;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .ref {
@@ -401,6 +402,7 @@ hr {
 	object-fit: cover;
 	object-position: 100% 0;
 	margin: 0 25%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .contact-det {
