--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,11 @@ hr {
 	top: 0;
 	z-index: 100;
 	border-top: 0;
-	background-color: #254E70;
+	background-color: rgba(37, 78, 112, 0.4);	
+	-moz-box-shadow: inset 0 2px 4px 0 rgba(255,255,255,0.16);
+ 	-webkit-box-shadow: inset 0 2px 4px 0 rgba(255,255,255,0.16);
+   	box-shadow: inset 0 2px 4px 0 rgba(255,255,255,0.16);
+	backdrop-filter: blur(20px);
   }
 
 /*********************************** Titles section **************************************/
